Correcciones oportunidad de venta

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -998,6 +998,7 @@ twig:
         nameOportunidad: '%app.nameOportunidad%'
         tipoCuentaOportunidad: '%app.tipoCuentaOportunidad%'
         cuentaOportunidad: '%app.cuentaOportunidad%'
+        accountManagerOportunidad: '%app.accountManagerOportunidad%'
         etapaOportunidad: '%app.etapaOportunidad%'
         fechaCierreOportunidad: '%app.fechaCierreOportunidad%'
         fechaRegistroOportunidad: '%app.fechaRegistroOportunidad%'
@@ -1020,6 +1021,7 @@ twig:
         nameOportunidadEs: '%app.nameOportunidadEs%'
         tipoCuentaOportunidadEs: '%app.tipoCuentaOportunidadEs%'
         cuentaOportunidadEs: '%app.cuentaOportunidadEs%'
+        accountManagerOportunidadEs: '%app.accountManagerOportunidadEs%'
         etapaOportunidadEs: '%app.etapaOportunidadEs%'
         fechaCierreOportunidadEs: '%app.fechaCierreOportunidadEs%'
         fechaRegistroOportunidadEs: '%app.fechaRegistroOportunidadEs%'
